# TinkerVision

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  index.html  index.md
CamerasAndProjection/: CamerasAndProjection.html  diag0.blend  diag0.blend1  diag1.blend  diag1.blend1
docs/html/: _a_r_u_c_o_detector_8h_source.html  _adaptive_threshold_8h_source.html  _add_graph_dialog_8h_source.html  _approx_distance_transform_8h_source.html  _average_filter_8h_source.html  _barcode_detector_8h_source.html  _base_node_8h_source.html  _bilateral_filter_8h_source.html  _blend_8h_source.html  _bounding_box_8h_source.html  _brightness_contrast_8h_source.html  _build_editor_widget_8h_source.html  _camera_distortion_8h_source.html  _canny_edge_detect_8h_source.html  _channel_demux_8h_source.html  _channel_mapper_8h_source.html  _channel_mux_8h_source.html  _circle_hough_transform_8h_source.html  _clear_color_8h_source.html  _compute_graph_2_nodes_2_image_nodes_8h_source.html  _compute_graph_2_nodes_2_misc_nodes_8h_source.html  _compute_graph_2_nodes_2_process_nodes_8h_source.html  _compute_graph_2_nodes_2_source_nodes_8h_source.html  _compute_shader_8h_source.html  _context_8h_source.html  _contour_8h_source.html  _convolution_8h_source.html  _copy_image_8h_source.html  _corner_detector_8h_source.html  _crop_8h_source.html  _data_types_8h_source.html  _delete_graph_dialog_8h_source.html  _downsample_8h_source.html  _find_contours_8h_source.html  _fixed_radius_n_n_8h_source.html  _g_u_i_2_node_editor_2_nodes_2_image_nodes_8h_source.html  _g_u_i_2_node_editor_2_nodes_2_misc_nodes_8h_source.html  _g_u_i_2_node_editor_2_nodes_2_process_nodes_8h_source.html  _g_u_i_2_node_editor_2_nodes_2_source_nodes_8h_source.html  _gaussian_blur_8h_source.html  (+687 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+16 more)
src/: AdaptiveThreshold.cpp  AdaptiveThreshold.h  ApproxDistanceTransform.cpp  ApproxDistanceTransform.h  BilateralFilter.cpp  BilateralFilter.h  Blend.cpp  Blend.h  BoundingBox.cpp  BoundingBox.h  BrightnessContrast.cpp  BrightnessContrast.h  CMDTool.cpp  CMakeLists.txt  CameraDistortion.cpp  CameraDistortion.h  CannyEdgeDetect.cpp  CannyEdgeDetect.h  ChannelDemux.cpp  ChannelDemux.h  ChannelMux.cpp  ChannelMux.h  ClearColor.cpp  ClearColor.h  ComputeShader.cpp  ComputeShader.h  Context.cpp  Context.h  Contour.cpp  Contour.h  CopyImage.cpp  CopyImage.h  CornerDetector.cpp  CornerDetector.h  FileLoader.cpp  FileLoader.h  FileSaver.cpp  FileSaver.h  FindContours.cpp  FindContours.h  (+67 more)
src/Algo/: FixedRadiusNN.cpp  FixedRadiusNN.h  Perspective3Point.cpp  Perspective3Point.h
src/CompositeProcess/: ARUCODetector.cpp  ARUCODetector.h  BarcodeDetector.cpp  BarcodeDetector.h  CannyEdgeDetect.cpp  CannyEdgeDetect.h  CornerDetector.cpp  CornerDetector.h  Resize.cpp  Resize.h  Sift.cpp  Sift.h
src/ComputeGraph/: Graph.cpp  Graph.h  ImageNodes.h  MiscNodes.h  Node.cpp  Node.h  RegisterNodes.cpp  RegisterNodes.h  SerializedObject.cpp  SerializedObject.h  SourceNodes.h
src/ComputeGraph/Nodes/: BaseNodes.h  IONodes.h  ImageNodes.h  MiscNodes.h  ProcessNodes.h  SourceNodes.h  StandardNodes.h
src/Core/: BoundingBox.cpp  BoundingBox.h  ComputeShader.cpp  ComputeShader.h  Context.cpp  Context.h  Contour.cpp  Contour.h  Image.cpp  Image.h  ImageGPU.cpp  ImageGPU.h  ImageType.h  ParallelFor.cpp  ParallelFor.h  ProcessHelper.cpp  ProcessHelper.h  SerializedObject.cpp  SerializedObject.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  VectorMath.h  Window.cpp  Window.h
src/GUI/: Main.cpp  MainWindow.cpp  MainWindow.h  NodeEditor.cpp  NodeEditor.h
src/GUI/BuildEditor/: BuildEditorWidget.cpp  BuildEditorWidget.h
src/GUI/NodeEditor/: BaseNode.cpp  BaseNode.h  Converters.h  DataTypes.h  NodeEditorWidget.cpp  NodeEditorWidget.h
src/GUI/NodeEditor/Nodes/: IONodes.h  ImageNodes.h  MiscNodes.h  ProcessNodes.h  SourceNodes.h
src/GUI/ProjectHierarchy/: AddGraphDialog.cpp  AddGraphDialog.h  DeleteGraphDialog.cpp  DeleteGraphDialog.h  HierarchyListModel.cpp  HierarchyListModel.h  ProjectHierarchyWidget.cpp  ProjectHierarchyWidget.h  YesNoDialog.cpp  YesNoDialog.h
src/IO/: CameraCapture.cpp  CameraCapture.h  ImageFile.cpp  ImageFile.h  ReadImageFile.cpp  ReadImageFile.h  VideoFile.cpp  VideoFile.h  VideoHelper.cpp  VideoHelper.h  WriteImageFile.cpp  WriteImageFile.h
src/Process/: ARUCOBitExtract.cpp  ARUCOBitExtract.h  AdaptiveThreshold.cpp  AdaptiveThreshold.h  ApproxDistanceTransform.cpp  ApproxDistanceTransform.h  AverageFilter.cpp  AverageFilter.h  BilateralFilter.cpp  BilateralFilter.h  Blend.cpp  Blend.h  BrightnessContrast.cpp  BrightnessContrast.h  CameraDistortion.cpp  CameraDistortion.h  CannyEdgeDetect.cpp  ChannelDemux.cpp  ChannelDemux.h  ChannelMapper.cpp  ChannelMapper.h  ChannelMux.cpp  ChannelMux.h  CircleHoughTransform.cpp  CircleHoughTransform.h  ClearColor.cpp  ClearColor.h  Convolution.cpp  Convolution.h  CopyImage.cpp  CopyImage.h  CornerDetector.cpp  Crop.cpp  Crop.h  DownSample.cpp  DownSample.h  Downsample.cpp  Downsample.h  FindContours.cpp  FindContours.h  (+76 more)
test/: CMakeLists.txt  CoreSystemTest.cpp  JavaTest.java  MarkerDetectionTest.cpp
